--- a/cube.html
+++ b/cube.html
@@ -98,7 +98,7 @@
         .time.act {
             display: block;
         }
-        .agin{
+        /* .agin{
             width:100px ;
             height: 100px;
             background-color: rgb(202, 179, 184);
@@ -108,6 +108,7 @@
             align-items: center;
             
         }
+        .agin-1{display: none;} */
     </style>
 </head>
 
@@ -118,7 +119,7 @@
     <div class="time">
         <span id="second"></span>
     </div>
-    <div class="agin" onclick="reset()"><span>重新開始</span></div>
+    <div class="agin" onclick="reset()"><span></span></div>
 
 
 
