--- a/cube.html
+++ b/cube.html
@@ -117,7 +117,7 @@
     <div class="score">0</div>
     <div id="plate"></div>
     <div class="time">
-        <span id="second"></span>
+        <span id="second">60</span>
     </div>
     <div class="agin" onclick="reset()"><span></span></div>
 
